docs: update README and fix startup script for Java 25
- README.md: Java 25, Spring Boot 4.0.5, Ignite 3.1.0, JDA 6.4.1
  убрана устаревшая секция с --add-opens (передаются через pom.xml)
- challengeBot.sh: удалены -XX:+UnlockExperimentalVMOptions и
  -XX:+ScavengeBeforeFullGC (удалён в Java 22, вызывает ошибку запуска)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>